--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node server.ts"
   },
   "dependencies": {
+    "@types/firebase": "^3.2.1",
     "@types/lodash": "^4.14.168",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
